Add undef and PI (fixes #64).

--- a/cheatsheet/snapshot.html
+++ b/cheatsheet/snapshot.html
@@ -175,6 +175,17 @@
                 </section>
                 <section>
 			<article>
+				<h2>Constants</h2>
+				<dl>
+					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/General#The_Undefined_Value">undef</a></code></dt>
+					<dd>undefined value</dd>
+					<dt><code>PI</code></dt>
+					<dd>mathematical constant <a href="https://en.wikipedia.org/wiki/Pi">&pi;</a> (~3.14159)</dd>
+				</dl>
+			</article>
+                </section>
+                <section>
+			<article>
 				<h2>Special variables</h2>
 				<dl>
 					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24fa.2C_.24fs_and_.24fn">$fa</a></code></dt>
