--- a/downloads.html
+++ b/downloads.html
@@ -423,6 +423,11 @@
                                 <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_18.04/ ./</code></small>
                             </pre>
 
+                            <h3>Ubuntu 18.10</h3>
+                            <pre>
+                                <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_18.10/ ./</code></small>
+                            </pre>
+
                             <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
                             
                             <h3>openSUSE Leap 42.3 (64-bit only)</h3>
