Use G+ community link for the last couple of month... (fixes openscad/openscad#1640)

--- a/community.html
+++ b/community.html
@@ -96,7 +96,7 @@
 <li><a href="#irc">IRC Channel</a></li>
 <li><a href="#forum">Forum</a></li>
 <li><a href="#other">Other</a></li>
-<li><a href="http://twitter.com/openscad"><i class="fa fa-twitter"></i></a><a href="https://google.com/+openscad"><i class="fa fa-google-plus"></i></a></li>
+<li><a href="http://twitter.com/openscad"><i class="fa fa-twitter"></i></a><a href="https://plus.google.com/u/0/communities/112968258499418200895"><i class="fa fa-google-plus"></i></a></li>
 		</ul>
 	</div>
 	
