$linenumber, $mainfilename and $currentfilename "special" variables

--- a/cheatsheet/snapshot.html
+++ b/cheatsheet/snapshot.html
@@ -60,16 +60,22 @@
 					<dd>number of fragments</dd>
 					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24t">$t</a></code></dt>
 					<dd>animation step</dd>
-                                        <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24vpr.2C_.24vpt_and_.24vpd">$vpr</a></code></dt>
+  					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24vpr.2C_.24vpt_and_.24vpd">$vpr</a></code></dt>
 					<dd>viewport rotation angles in degrees</dd>
-                                        <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24vpr.2C_.24vpt_and_.24vpd">$vpt</a></code></dt>
+					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24vpr.2C_.24vpt_and_.24vpd">$vpt</a></code></dt>
 					<dd>viewport translation</dd>
-                                        <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24vpr.2C_.24vpt_and_.24vpd">$vpd</a></code></dt>
+					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24vpr.2C_.24vpt_and_.24vpd">$vpd</a></code></dt>
 					<dd>viewport camera distance</dd>
-                                        <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/User-Defined_Functions_and_Modules#children">$children</a></code></dt>
-                                        <dd>&nbsp;number of module children</dd>
-                                        <dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$preview">$preview</a></code></dt>
-                                        <dd>&nbsp;true in F5 preview, false for F6</dd>
+					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/User-Defined_Functions_and_Modules#children">$children</a></code></dt>
+					<dd>&nbsp;number of module children</dd>
+					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#$preview">$preview</a></code></dt>
+					<dd>&nbsp;true in F5 preview, false for F6</dd>
+					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24linenumber">$linenumber</a></code></dt>
+					<dd>&nbsp;line number</dd>
+					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24mainfilename">$mainfilename</a></code></dt>
+					<dd>&nbsp;main filename</dd>
+					<dt><code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#.24currentfilename">$currentfilename</a></code></dt>
+					<dd>&nbsp;current filename</dd>
 				</dl>
 			</article>
 			<article>
