--- a/downloads.html
+++ b/downloads.html
@@ -292,54 +292,38 @@
 			<div id="snapshots-windows" class="subsection">
 				<h2>Windows</h2>
 
-				<a id="WIN32_SNAPSHOT1_URL" href="http://files.openscad.org">
-				<button class="left, download-button">
-					<h3 id="WIN32_SNAPSHOT1_NAME">OpenSCAD</h3>
-					<small>x86 (32-bit) exe installer - </small><small id="WIN32_SNAPSHOT1_SIZE">?? MB</small>
-				</button>
+				<div class="left, download-button">
+					<a id="WIN32_SNAPSHOT_INSTALLER_URL" href="http://files.openscad.org">
+					<h3 id="WIN32_SNAPSHOT_INSTALLER_NAME">OpenSCAD</h3></a>
+					<small>x86 (32-bit) exe installer - </small><small id="WIN32_SNAPSHOT_INSTALLER_SIZE">?? MB</small><br>
+				        <small><a id="WIN32_SNAPSHOT_INSTALLER_SHA1_URL" href="">sha1</a></small> -
+				        <small><a id="WIN32_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small>
+				</div>
+
+				<div class="download-button">
+					<a id="WIN32_SNAPSHOT_ZIP_URL" href="http://files.openscad.org">
+					<h3 id="WIN32_SNAPSHOT_ZIP_NAME">OpenSCAD</h3></a>
+					<small>x86 (32-bit) zip package - </small><small id="WIN32_SNAPSHOT_ZIP_SIZE">?? MB</small><br>
+				        <small><a id="WIN32_SNAPSHOT_ZIP_SHA1_URL" href="">sha1</a></small> -
+				        <small><a id="WIN32_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
+				</div>
+
+				<div class="left, download-button">
+					<a id="WIN64_SNAPSHOT_INSTALLER_URL" href="http://files.openscad.org">
+					<h3 id="WIN64_SNAPSHOT_INSTALLER_NAME">OpenSCAD</h3></a>
+					<small>x86 (64-bit) exe installer - </small><small id="WIN64_SNAPSHOT_INSTALLER_SIZE">?? MB</small><br>
+				        <small><a id="WIN64_SNAPSHOT_INSTALLER_SHA1_URL" href="">sha1</a></small> -
+				        <small><a id="WIN64_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small>
+				</div>
+
+				<div class="download-button">
+					<a id="WIN64_SNAPSHOT_ZIP_URL" href="http://files.openscad.org">
+					<h3 id="WIN64_SNAPSHOT_ZIP_NAME">OpenSCAD</h3></a>
+					<small>x86 (64-bit) zip package - </small><small id="WIN64_SNAPSHOT_ZIP_SIZE">?? MB</small><br>
+				        <small><a id="WIN64_SNAPSHOT_ZIP_SHA1_URL" href="">sha1</a></small> -
+				        <small><a id="WIN64_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
+				</div>
 				</a>
-
-				<a id="WIN32_SNAPSHOT2_URL" href="http://files.openscad.org">
-				<button class="download-button">
-					<h3 id="WIN32_SNAPSHOT2_NAME">OpenSCAD</h3>
-					<small>x86 (32-bit) zip package - </small><small id="WIN32_SNAPSHOT2_SIZE">?? MB</small>
-				</button>
-				</a>
-
-				<!--
-				<a id="WIN32_SNAPSHOT3_URL" href="http://files.openscad.org">
-				<button class="download-button">
-					<h3 id="WIN32_SNAPSHOT3_NAME">OpenSCAD</h3>
-					<small>x86 (32-bit) test suite - </small><small id="WIN32_SNAPSHOT3_SIZE">?? MB</small>
-				</button>
-				</a>
-				-->
-
-				<br clear="both"/>
-
-				<a id="WIN64_SNAPSHOT1_URL" href="http://files.openscad.org">
-				<button class="left, download-button">
-					<h3 id="WIN64_SNAPSHOT1_NAME">OpenSCAD</h3>
-					<small>x86 (64-bit) exe installer - </small><small id="WIN64_SNAPSHOT1_SIZE">?? MB</small>
-				</button>
-
-				</a>
-				<a id="WIN64_SNAPSHOT2_URL" href="http://files.openscad.org">
-				<button class="download-button">
-					<h3 id="WIN64_SNAPSHOT2_NAME">OpenSCAD</h3>
-					<small>x86 (64-bit) zip package - </small><small id="WIN64_SNAPSHOT2_SIZE">?? MB</small>
-				</button>
-				</a>
-
-				<!--
-				<a id="WIN64_SNAPSHOT3_URL" href="http://files.openscad.org">
-				<button class="download-button">
-					<h3 id="WIN64_SNAPSHOT3_NAME">OpenSCAD</h3>
-					<small>x86 (64-bit) test suite - </small><small id="WIN64_SNAPSHOT3_SIZE">?? MB</small>
-				</button>
-				</a>
-				-->
-
 			</div>
 
 			<div id="snapshots-linux" class="subsection">
