Update Windows snapshots; Switch to AppImage built on CircleCI.

--- a/downloads.html
+++ b/downloads.html
@@ -332,15 +332,13 @@
 				distribution (see <a href="#snapshots-linux-distro">below</a>), the following
 				AppImage builds are still experimental.</p>
 
-			    <p>Right now only the Intel/64-bit AppImage build is working, we'd like to provide
-				the Intel/32-bit and ARM 32/64-bit builds, but there are currently some issues
-				with the OBS builds that need investigation.</p>
-			    <p><a id="LIN64_SNAPSHOT_URL" href="http://files.openscad.org">
-				<button class="download-button">
-				    <h3 id="LIN64_SNAPSHOT_NAME">OpenSCAD</h3>
-				    <small>x64 (64-bit) - </small><small id="LIN64_SNAPSHOT_SIZE">?? MB</small>
-				</button>
-			    </a></p>
+			    <div class="left, download-button">
+				<a id="LIN64_SNAPSHOT_URL" href="http://files.openscad.org">
+				<h3 id="LIN64_SNAPSHOT_NAME">OpenSCAD</h3></a>
+				<small>x86 (64-bit) AppImage - </small><small id="LIN64_SNAPSHOT_SIZE">?? MB</small><br>
+				<small><a id="LIN64_SNAPSHOT_SHA1_URL" href="">sha1</a></small> -
+				<small><a id="LIN64_SNAPSHOT_SHA256_URL" href="">sha256</a></small>
+			    </div>
 
 			    <h2>Linux - Snap</h2>
                             <p><a href="https://snapcraft.io/openscad-nightly">Snap packages</a> are available,
