Update dummy links and key location to HTTPS

--- a/downloads.html
+++ b/downloads.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<!--[if lt IE 9]>
 	Your web browser is too old to be compatible with our download page. Please
-	visit <a href="http://files.openscad.org">http://files.openscad.org</a> 
+	visit <a href="https://files.openscad.org">https://files.openscad.org</a> 
 	directly to download the file you wish to use. Thanks.
 	<![endif]-->
 <head>
@@ -15,7 +15,7 @@
 
 	<noscript>
 	 <center>
-	  Your browser has javascript disabled -- file links will go to a folder on <a href="http://files.openscad.org.">files.openscad.org</a><br>
+	  Your browser has javascript disabled -- file links will go to a folder on <a href="https://files.openscad.org.">files.openscad.org</a><br>
 	  Please find your desired file inside the folder.
 	 </center>
 	</noscript>
@@ -138,7 +138,7 @@
 			<h1>Mac OS X</h1>
 			<div class="subsection">
 				<p>System requirements: Mac OS X 10.7 or newer</p>
-				<a id="MAC_RELEASE_URL" href="http://files.openscad.org">
+				<a id="MAC_RELEASE_URL" href="https://files.openscad.org">
 				<button class="download-button">
 					<h3 id="MAC_RELEASE_NAME">OpenSCAD</h3>
 					<small>64 bit Intel - dmg package - </small><small id="MAC_RELEASE_SIZE">?? MB</small>
@@ -156,26 +156,26 @@
 		<section id="windows">
 			<h1>Windows</h1>
 			<p>System requirements: Windows XP or newer on x86 32/64 bit</p>
-			<a id="WIN32_RELEASE1_URL" href="http://files.openscad.org/files">
+			<a id="WIN32_RELEASE1_URL" href="https://files.openscad.org">
 			<button class="left, download-button">
 			  <h3 id="WIN32_RELEASE1_NAME">OpenSCAD</h3>
 			  <small>x86 (32-bit) exe installer - </small><small id="WIN32_RELEASE1_SIZE">?? MB</small>
 			</button>
 			</a>
-			<a id="WIN32_RELEASE2_URL" href="http://files.openscad.org">
+			<a id="WIN32_RELEASE2_URL" href="https://files.openscad.org">
 			<button class="download-button">
 			  <h3 id="WIN32_RELEASE2_NAME">OpenSCAD</h3>
 			  <small>x86 (32-bit) zip package - </small><small id="WIN32_RELEASE2_SIZE">?? MB</small>
 			</button>
 			</a>
 			<br clear="both"/>
-			<a id="WIN64_RELEASE1_URL" href="http://files.openscad.org">
+			<a id="WIN64_RELEASE1_URL" href="https://files.openscad.org">
 			<button class="left, download-button">
 			  <h3 id="WIN64_RELEASE1_NAME">OpenSCAD</h3>
 			  <small>x86 (64-bit) exe installer - </small><small id="WIN64_RELEASE1_SIZE">?? MB</small>
 			</button>
 			</a>
-			<a id="WIN64_RELEASE2_URL" href="http://files.openscad.org">
+			<a id="WIN64_RELEASE2_URL" href="https://files.openscad.org">
 			<button class="download-button">
 			  <h3 id="WIN64_RELEASE2_NAME">OpenSCAD</h3>
 			  <small>x86 (64-bit) zip package - </small><small id="WIN64_RELEASE2_SIZE">?? MB</small>
@@ -224,7 +224,7 @@
 			<div id="other-linux" class="subsection">
 				<h2>Other Linux</h2>
 				<p>The AppImage package is intended to run on any recent Linux distribution. For more information about how AppImages work, see the <a href="https://appimage.org/">AppImage WebSite</a>.</p>
-				<a id="LIN64_RELEASE_URL" href="http://files.openscad.org">
+				<a id="LIN64_RELEASE_URL" href="https://files.openscad.org">
 				<button class="download-button">
 					<h3 id="LIN64_RELEASE_NAME">OpenSCAD</h3>
 					<small>x64 (64-bit) - AppImage -</small><small id="LIN64_RELEASE_SIZE">?? MB</small>
@@ -265,7 +265,7 @@
                 <a href="https://github.com/openscad/openscad"><img class="github-ribbon" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 		<section id="source-code" class="github-ribbon">
 			<h1>Source Code</h1>
-			<a id="SRC_RELEASE_URL" href="http://files.openscad.org">
+			<a id="SRC_RELEASE_URL" href="https://files.openscad.org">
 			<button class="left, last, download-button">
 			  <h3 id="SRC_RELEASE_NAME">OpenSCAD</h3>
 			  <small>source code - tgz archive -</small><small id="SRC_RELEASE_SIZE">?? MB</small>
@@ -281,7 +281,7 @@
 
 			<div id="snapshots-osx" class="subsection">
 				<h2>Mac OS X</h2>
-				<a id="MAC_SNAPSHOT_URL" href="http://files.openscad.org">
+				<a id="MAC_SNAPSHOT_URL" href="https://files.openscad.org">
 				<button class="download-button">
 					<h3 id="MAC_SNAPSHOT_NAME">OpenSCAD</h3>
 					<small>64 bit Intel - dmg package - </small><small id="MAC_SNAPSHOT_SIZE">?? MB</small>
@@ -293,7 +293,7 @@
 				<h2>Windows</h2>
 
 				<div class="left, download-button">
-					<a id="WIN32_SNAPSHOT_INSTALLER_URL" href="http://files.openscad.org">
+					<a id="WIN32_SNAPSHOT_INSTALLER_URL" href="https://files.openscad.org">
 					<h3 id="WIN32_SNAPSHOT_INSTALLER_NAME">OpenSCAD</h3></a>
 					<small>x86 (32-bit) exe installer - </small><small id="WIN32_SNAPSHOT_INSTALLER_SIZE">?? MB</small><br>
 				        <small><a id="WIN32_SNAPSHOT_INSTALLER_SHA1_URL" href="">sha1</a></small> -
@@ -301,7 +301,7 @@
 				</div>
 
 				<div class="download-button">
-					<a id="WIN32_SNAPSHOT_ZIP_URL" href="http://files.openscad.org">
+					<a id="WIN32_SNAPSHOT_ZIP_URL" href="https://files.openscad.org">
 					<h3 id="WIN32_SNAPSHOT_ZIP_NAME">OpenSCAD</h3></a>
 					<small>x86 (32-bit) zip package - </small><small id="WIN32_SNAPSHOT_ZIP_SIZE">?? MB</small><br>
 				        <small><a id="WIN32_SNAPSHOT_ZIP_SHA1_URL" href="">sha1</a></small> -
@@ -309,7 +309,7 @@
 				</div>
 
 				<div class="left, download-button">
-					<a id="WIN64_SNAPSHOT_INSTALLER_URL" href="http://files.openscad.org">
+					<a id="WIN64_SNAPSHOT_INSTALLER_URL" href="https://files.openscad.org">
 					<h3 id="WIN64_SNAPSHOT_INSTALLER_NAME">OpenSCAD</h3></a>
 					<small>x86 (64-bit) exe installer - </small><small id="WIN64_SNAPSHOT_INSTALLER_SIZE">?? MB</small><br>
 				        <small><a id="WIN64_SNAPSHOT_INSTALLER_SHA1_URL" href="">sha1</a></small> -
@@ -317,7 +317,7 @@
 				</div>
 
 				<div class="download-button">
-					<a id="WIN64_SNAPSHOT_ZIP_URL" href="http://files.openscad.org">
+					<a id="WIN64_SNAPSHOT_ZIP_URL" href="https://files.openscad.org">
 					<h3 id="WIN64_SNAPSHOT_ZIP_NAME">OpenSCAD</h3></a>
 					<small>x86 (64-bit) zip package - </small><small id="WIN64_SNAPSHOT_ZIP_SIZE">?? MB</small><br>
 				        <small><a id="WIN64_SNAPSHOT_ZIP_SHA1_URL" href="">sha1</a></small> -
@@ -333,7 +333,7 @@
 				AppImage builds are still experimental.</p>
 
 			    <div class="left, download-button">
-				<a id="LIN64_SNAPSHOT_URL" href="http://files.openscad.org">
+				<a id="LIN64_SNAPSHOT_URL" href="https://files.openscad.org">
 				<h3 id="LIN64_SNAPSHOT_NAME">OpenSCAD</h3></a>
 				<small>x86 (64-bit) AppImage - </small><small id="LIN64_SNAPSHOT_SIZE">?? MB</small><br>
 				<small><a id="LIN64_SNAPSHOT_SHA1_URL" href="">sha1</a></small> -
@@ -368,7 +368,7 @@
 			    <p>NOTE: If you get errors about an expired key valid till 2016-11-28, please re-import via the following command.</p>
 
                             <pre>
-                                <small><code># wget -qO - http://files.openscad.org/OBS-Repository-Key.pub | sudo apt-key add -</code></small>
+                                <small><code># wget -qO - https://files.openscad.org/OBS-Repository-Key.pub | sudo apt-key add -</code></small>
                             </pre>
 
                             <br/>
@@ -470,7 +470,7 @@
 		<section id="priorreleases">
 			<h1>Prior Releases</h1>
 
-			<p>Prior releases are available at <a href="http://files.openscad.org">files.openscad.org</a></p>
+			<p>Prior releases are available at <a href="https://files.openscad.org">files.openscad.org</a></p>
 		</section>
 
 
