is_list, is_num, is_bool, is_string

--- a/cheatsheet/snapshot.html
+++ b/cheatsheet/snapshot.html
@@ -160,6 +160,10 @@
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/User-Defined_Functions_and_Modules#children">children</a>([idx])</code>
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#assert">assert</a>(condition, message)</code>
 				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#is_undef">is_undef</a></code>
+				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#is_list">is_list</a></code>
+				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#is_num">is_num</a></code>
+				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#is_bool">is_bool</a></code>
+				<code><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Other_Language_Features#is_string">is_string</a></code>
 			</article>
 		</section>
 
