Update github repository links

--- a/gsod-2019.html
+++ b/gsod-2019.html
@@ -199,7 +199,8 @@
 <b>Links:</b>
 <ul>
     <li><b>Contact address:</b> <a href="mailto:gsod2019@openscad.org">gsod2019@openscad.org</a></li>
-    <li><b>Github organization:</b> <a href="https://github.com/openscad/">https://github.com/openscad/openscad/</a></li>
+    <li><b>Github organization:</b> <a href="https://github.com/openscad/">https://github.com/openscad/</a> (<a href="https://github.com/openscad/openscad/">source repo</a>, <a href="https://github.com/openscad/openscad.github.com
+/">web site repo</a></li>
     <li><b>Forum/Mailing list:</b> <a href="http://forum.openscad.org/">http://forum.openscad.org/</a></li>
     <li><b>IRC channel #openscad on freenode:</b> <a href="https://webchat.freenode.net/?channels=openscad">https://webchat.freenode.net/?channels=openscad</a></li>
 </ul>
