Add link to cheat sheet.

--- a/gsod-2019.html
+++ b/gsod-2019.html
@@ -161,7 +161,7 @@
     </tr>
     <tr>
         <th>Current state</th>
-        <td>Relatively complete and reasonably structured documentation exists, but it's lacking a single style, clear references and a good list of examples with reference pictures.<br><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">https://en.wikibooks.org/wiki/OpenSCAD_User_Manual</a></td>
+        <td>Relatively complete and reasonably structured documentation exists, but it's lacking a single style, clear references and a good list of examples with reference pictures.<br><a href="https://en.wikibooks.org/wiki/OpenSCAD_User_Manual">https://en.wikibooks.org/wiki/OpenSCAD_User_Manual</a><br>Cheat Sheet: <a href="https://www.openscad.org/cheatsheet/">https://www.openscad.org/cheatsheet/</a> - (<a href="https://www.openscad.org/cheatsheet/snapshot.html">development version</a>)</td>
     </tr>
     <tr>
         <th>Expected license</th>
