Update OBS snapshot repo list.

--- a/downloads.html
+++ b/downloads.html
@@ -373,7 +373,11 @@
 
                             <br/>
                             <p>After the key is added, the repository URL needs to be configured. This can be done by creating a new
-                                file <b>/etc/apt/sources.list.d/openscad.list</b> with the URL specific to the distribution.
+                                file <b>/etc/apt/sources.list.d/openscad.list</b> with the URL specific to the distribution.</p>
+				
+			    <p>Some of the repository links below are shown as HTTP, please check for your installation if it's
+				possible to use HTTPS, OBS support also HTTPS links, but not all installations provide plugins for
+				those repo URLs.</p>
 
                             <h3>Debian 8 (Jessie)</h3>
                             <pre>
@@ -387,7 +391,12 @@
 
                             <h3>Debian Testing</h3>
                             <pre>
-                                <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/Debian_Testing_standard/ ./</code></small>
+                                <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/Debian_Testing/ ./</code></small>
+                            </pre>
+
+                            <h3>Debian Unstable</h3>
+                            <pre>
+                                <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/Debian_Unstable/ ./</code></small>
                             </pre>
 
                             <h3>Ubuntu 16.04</h3>
@@ -408,6 +417,11 @@
                             <h3>Ubuntu 18.10</h3>
                             <pre>
                                 <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_18.10/ ./</code></small>
+                            </pre>
+
+                            <h3>Ubuntu 19.04</h3>
+                            <pre>
+                                <small><code>deb http://download.opensuse.org/repositories/home:/t-paul/xUbuntu_19.04/ ./</code></small>
                             </pre>
 
                             <h2>openSUSE packages built on <a href="https://build.opensuse.org/">OpenSUSE build service</a></h2>
@@ -453,6 +467,12 @@
                             <pre>
                                 <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_28/</code></small>
                             </pre>
+
+                            <h3>Fedora 29</h3>
+                            <pre>
+                                <small><code>https://download.opensuse.org/repositories/home:/t-paul/Fedora_29/</code></small>
+                            </pre>
+
 
                             <h3>Fedora Rawhide</h3>
                             <pre>
