Fix issues reported by validator.w3.org.

--- a/downloads.html
+++ b/downloads.html
@@ -14,10 +14,8 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 	<noscript>
-	 <center>
 	  Your browser has javascript disabled -- file links will go to a folder on <a href="https://files.openscad.org.">files.openscad.org</a><br>
 	  Please find your desired file inside the folder.
-	 </center>
 	</noscript>
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
@@ -31,7 +29,7 @@
 	<script src="assets/js/waypoints-sticky.min.js"></script>
 
 	<script src="assets/js/header.js"></script>
-	<script type="text/javascript">
+	<script>
           var _gaq = _gaq || [];
           _gaq.push(['_setAccount', 'UA-26999768-1']);
           _gaq.push(['_setDomainName', 'openscad.org']);
@@ -44,7 +42,7 @@
           })();
 	</script>
 
-	<script type="text/javascript">
+	<script>
 	  var fileinfo = {};
 	</script>
 	<script src="inc/mac_snapshot_links.js"></script>
@@ -54,7 +52,7 @@
 	<script src="inc/win_release_links.js"></script>
 	<script src="inc/linux_release_links.js"></script>
 	<script src="inc/src_release_links.js"></script>
-	<script type="text/javascript">
+	<script>
 	  jQuery(document).ready(function(){
 	    for (var fileid in fileinfo) {
 	      if (fileid.indexOf("_URL") >= 0) {
@@ -65,7 +63,6 @@
 	    }
 	  });
 	</script>
-
 </head>
 <body>
 
@@ -79,7 +76,7 @@
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="7ZQNEVE87X2KN">
             <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="Donate using PayPal">
-            <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+            <img alt="" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
           </form>
           </div>
 		<a class="FlattrButton" style="display:none;" rev="flattr" href="http://openscad.org"></a><br/>
@@ -242,7 +239,7 @@
 					<code># pkgin install openscad</code>
 				</pre>
 			</div>
-			<div id="openbsd" class="subsection">
+			<div id="freebsd" class="subsection">
 				<h2>FreeBSD (>=10)</h2>
 				<pre>
 					<code># pkg install openscad</code>
@@ -323,7 +320,6 @@
 				        <small><a id="WIN64_SNAPSHOT_ZIP_SHA1_URL" href="">sha1</a></small> -
 				        <small><a id="WIN64_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
 				</div>
-				</a>
 			</div>
 
 			<div id="snapshots-linux" class="subsection">
