More fixes for issues reported by validator.w3.org.

--- a/downloads.html
+++ b/downloads.html
@@ -14,8 +14,7 @@
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 	<noscript>
-	  Your browser has javascript disabled -- file links will go to a folder on <a href="https://files.openscad.org.">files.openscad.org</a><br>
-	  Please find your desired file inside the folder.
+	  Your browser has javascript disabled -- file links will go to a folder on https://files.openscad.org/ - Please find your desired file inside the folder.
 	</noscript>
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
@@ -75,7 +74,7 @@
           <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
             <input type="hidden" name="cmd" value="_s-xclick">
             <input type="hidden" name="hosted_button_id" value="7ZQNEVE87X2KN">
-            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="Donate using PayPal">
+            <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" name="submit" alt="Donate using PayPal">
             <img alt="" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
           </form>
           </div>
