Update remaining coinwidget links to locally hosted version.

--- a/downloads.html
+++ b/downloads.html
@@ -79,7 +79,7 @@
           </form>
           </div>
 		<a class="FlattrButton" style="display:none;" rev="flattr" href="http://openscad.org"></a><br/>
-          <script src="http://coinwidget.com/widget/coin.js"></script>
+          <script src="assets/widget_coin/coin.js"></script>
           <script>
             CoinWidgetCom.go({
 	    wallet_address: "18Eakg4ZCjjfVajXGvyntLKsEJYvZuT49C"
