Move noscript to valid place and add red background.

--- a/downloads.html
+++ b/downloads.html
@@ -13,10 +13,6 @@
   
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
-	<noscript>
-	  Your browser has javascript disabled -- file links will go to a folder on https://files.openscad.org/ - Please find your desired file inside the folder.
-	</noscript>
-
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
 	<script src="assets/js/modernizr-1.7.min.js"></script>
 
@@ -64,6 +60,13 @@
 	</script>
 </head>
 <body>
+
+<noscript>
+	<div style="text-align: center; background-color: #ffe8e8">
+	<p>Your browser has javascript disabled -- file links will go to a folder on <a href="https://files.openscad.org.">files.openscad.org</a></p>
+	<p>Please find your desired file inside the folder.</p>
+	</div>
+</noscript>
 
 <div id="page-wrap">
 <header>
