--- a/community.html
+++ b/community.html
@@ -6,7 +6,8 @@
 	<title>OpenSCAD - Community</title>
 
 	<link href="assets/css/style.css" rel="stylesheet">
-        <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/brands.css" integrity="sha384-n9+6/aSqa9lBidZMRCQHTHKJscPq6NW4pCQBiMmHdUCvPN8ZOg2zJJTkC7WIezWv" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/fontawesome.css" integrity="sha384-vd1e11sR28tEK9YANUtpIOdjGW14pS87bUBuOIoBILVWLFnS+MCX9T6MMf0VdPGq" crossorigin="anonymous">
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
 
 	<script src="assets/js/jquery-1.9.1.min.js"></script>
@@ -96,7 +97,7 @@
 <li><a href="#irc">IRC Channel</a></li>
 <li><a href="#forum">Forum</a></li>
 <li><a href="#other">Other</a></li>
-<li><a href="http://twitter.com/openscad"><i class="fa fa-twitter"></i></a></li>
+<li><a href="http://twitter.com/openscad"><i class="fab fa-twitter"></i></a></li>
 		</ul>
 	</div>
 	
