--- a/community.html
+++ b/community.html
@@ -117,9 +117,9 @@
 			</ul>
 			<h2>Programmers</h2>
 			<ul>
-				<li>Fix <a href="https://github.com/openscad/openscad/issues">bugs</a> - good ones to get started are tagged <a href="https://github.com/openscad/openscad/issues?labels=Low+Hanging">Low Hanging</a></li>
+				<li>Fix <a href="https://github.com/openscad/openscad/issues">bugs</a> - good ones to get started are tagged <a href="https://github.com/openscad/openscad/issues?labels=Tag%3A+Low+Hanging">Low Hanging</a></li>
 				<li>Write (better) <a href="https://github.com/openscad/openscad/blob/master/doc/testing.txt">tests</a></li>
-				<li>Implement <a href="https://github.com/openscad/openscad/issues?labels=New+Feature">new features</a></li>
+				<li>Implement <a href="https://github.com/openscad/openscad/issues?labels=Tag%3A+New+Feature">new features</a></li>
 				<li>Refactor or clean up code</li>
 			</ul>
                         <h2>Donations</h2>
