Add link to "OpenSCAD Projects for Junior High Teachers by Rob Ward".

--- a/gsod-2019.html
+++ b/gsod-2019.html
@@ -109,7 +109,7 @@
     </tr>
     <tr>
         <th>Current state</th>
-        <td>No existing introduction yet</td>
+        <td>No existing introduction yet.<br>References: OpenSCAD Projects for Junior High Teachers by Rob Ward (<a href="https://www.thingiverse.com/thing:2759515">Thingiverse 2759515</a>)</td>
     </tr>
     <tr>
         <th>Expected license</th>
