Add links to code signature for Windows and Linux AppImage snapshots.

--- a/downloads.html
+++ b/downloads.html
@@ -296,32 +296,36 @@
 					<a id="WIN32_SNAPSHOT_INSTALLER_URL" href="https://files.openscad.org">
 					<h3 id="WIN32_SNAPSHOT_INSTALLER_NAME">OpenSCAD</h3></a>
 					<small>x86 (32-bit) exe installer - </small><small id="WIN32_SNAPSHOT_INSTALLER_SIZE">?? MB</small><br>
-				        <small><a id="WIN32_SNAPSHOT_INSTALLER_SHA1_URL" href="">sha1</a></small> -
-				        <small><a id="WIN32_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small>
+					<small><a id="WIN32_SNAPSHOT_INSTALLER_ASC_URL" href="">asc</a></small> -
+					<small><a id="WIN32_SNAPSHOT_INSTALLER_SHA1_URL" href="">sha1</a></small> -
+					<small><a id="WIN32_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small>
 				</div>
 
 				<div class="download-button">
 					<a id="WIN32_SNAPSHOT_ZIP_URL" href="https://files.openscad.org">
 					<h3 id="WIN32_SNAPSHOT_ZIP_NAME">OpenSCAD</h3></a>
 					<small>x86 (32-bit) zip package - </small><small id="WIN32_SNAPSHOT_ZIP_SIZE">?? MB</small><br>
-				        <small><a id="WIN32_SNAPSHOT_ZIP_SHA1_URL" href="">sha1</a></small> -
-				        <small><a id="WIN32_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
+					<small><a id="WIN32_SNAPSHOT_ZIP_ASC_URL" href="">asc</a></small> -
+					<small><a id="WIN32_SNAPSHOT_ZIP_SHA1_URL" href="">sha1</a></small> -
+					<small><a id="WIN32_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
 				</div>
 
 				<div class="left, download-button">
 					<a id="WIN64_SNAPSHOT_INSTALLER_URL" href="https://files.openscad.org">
 					<h3 id="WIN64_SNAPSHOT_INSTALLER_NAME">OpenSCAD</h3></a>
 					<small>x86 (64-bit) exe installer - </small><small id="WIN64_SNAPSHOT_INSTALLER_SIZE">?? MB</small><br>
-				        <small><a id="WIN64_SNAPSHOT_INSTALLER_SHA1_URL" href="">sha1</a></small> -
-				        <small><a id="WIN64_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small>
+					<small><a id="WIN64_SNAPSHOT_INSTALLER_ASC_URL" href="">asc</a></small> -
+					<small><a id="WIN64_SNAPSHOT_INSTALLER_SHA1_URL" href="">sha1</a></small> -
+					<small><a id="WIN64_SNAPSHOT_INSTALLER_SHA256_URL" href="">sha256</a></small>
 				</div>
 
 				<div class="download-button">
 					<a id="WIN64_SNAPSHOT_ZIP_URL" href="https://files.openscad.org">
 					<h3 id="WIN64_SNAPSHOT_ZIP_NAME">OpenSCAD</h3></a>
 					<small>x86 (64-bit) zip package - </small><small id="WIN64_SNAPSHOT_ZIP_SIZE">?? MB</small><br>
-				        <small><a id="WIN64_SNAPSHOT_ZIP_SHA1_URL" href="">sha1</a></small> -
-				        <small><a id="WIN64_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
+					<small><a id="WIN64_SNAPSHOT_ZIP_ASC_URL" href="">asc</a></small> -
+					<small><a id="WIN64_SNAPSHOT_ZIP_SHA1_URL" href="">sha1</a></small> -
+					<small><a id="WIN64_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
 				</div>
 				</a>
 			</div>
@@ -336,9 +340,10 @@
 				<a id="LIN64_SNAPSHOT_URL" href="https://files.openscad.org">
 				<h3 id="LIN64_SNAPSHOT_NAME">OpenSCAD</h3></a>
 				<small>x86 (64-bit) AppImage - </small><small id="LIN64_SNAPSHOT_SIZE">?? MB</small><br>
+				<small><a id="LIN64_SNAPSHOT_ASC_URL" href="">asc</a></small> -
 				<small><a id="LIN64_SNAPSHOT_SHA1_URL" href="">sha1</a></small> -
 				<small><a id="LIN64_SNAPSHOT_SHA256_URL" href="">sha256</a></small>
-			    </div>
+			</div>
 
 			    <h2>Linux - Snap</h2>
                             <p><a href="https://snapcraft.io/openscad-nightly">Snap packages</a> are available,
