Added pgp signature for src release

--- a/downloads.html
+++ b/downloads.html
@@ -268,7 +268,8 @@
 			<a id="SRC_RELEASE_URL" href="https://files.openscad.org">
 			<button class="left, last, download-button">
 			  <h3 id="SRC_RELEASE_NAME">OpenSCAD</h3>
-			  <small>source code - tgz archive -</small><small id="SRC_RELEASE_SIZE">?? MB</small>
+			  <small>source code - tgz archive -</small><small id="SRC_RELEASE_SIZE">?? MB</small><br/>
+			  <small><a id="SRC_RELEASE_ASC_URL" href="">asc</a></small>
 			</button>
                         </a>
 			<p>You can also access the latest source code on github: <a href="https://github.com/openscad/openscad" target="_blank">openscad/openscad on github</a></p>
