--- a/downloads.html
+++ b/downloads.html
@@ -156,31 +156,39 @@
 		<section id="windows">
 			<h1>Windows</h1>
 			<p>System requirements: Windows XP or newer on x86 32/64 bit</p>
-			<a id="WIN32_RELEASE1_URL" href="https://files.openscad.org">
-			<button class="left, download-button">
-			  <h3 id="WIN32_RELEASE1_NAME">OpenSCAD</h3>
-			  <small>x86 (32-bit) exe installer - </small><small id="WIN32_RELEASE1_SIZE">?? MB</small>
-			</button>
-			</a>
-			<a id="WIN32_RELEASE2_URL" href="https://files.openscad.org">
-			<button class="download-button">
-			  <h3 id="WIN32_RELEASE2_NAME">OpenSCAD</h3>
-			  <small>x86 (32-bit) zip package - </small><small id="WIN32_RELEASE2_SIZE">?? MB</small>
-			</button>
-			</a>
+			<div class="left, download-button">
+				<a id="WIN32_RELEASE_INSTALLER_URL" href="https://files.openscad.org">
+			  <h3 id="WIN32_RELEASE_INSTALLER_NAME">OpenSCAD</h3></a>
+				<small>x86 (32-bit) exe installer - </small><small id="WIN32_RELEASE_INSTALLER_SIZE">?? MB</small><br>
+				<small><a id="WIN32_RELEASE_INSTALLER_ASC_URL" href="">asc</a></small> -
+				<small><a id="WIN32_RELEASE_INSTALLER_SHA256_URL" href="">sha256</a></small> -
+				<small><a id="WIN32_RELEASE_INSTALLER_SHA512_URL" href="">sha512</a></small>
+			</div>
+			<div class="download-button">
+				<a id="WIN32_RELEASE_ZIP_URL" href="https://files.openscad.org">
+			  <h3 id="WIN32_RELEASE_ZIP_NAME">OpenSCAD</h3></a>
+				<small>x86 (32-bit) exe installer - </small><small id="WIN32_RELEASE_ZIP_SIZE">?? MB</small><br>
+				<small><a id="WIN32_RELEASE_ZIP_ASC_URL" href="">asc</a></small> -
+				<small><a id="WIN32_RELEASE_ZIP_SHA256_URL" href="">sha256</a></small> -
+				<small><a id="WIN32_RELEASE_ZIP_SHA512_URL" href="">sha512</a></small>
+			</div>
 			<br clear="both"/>
-			<a id="WIN64_RELEASE1_URL" href="https://files.openscad.org">
-			<button class="left, download-button">
-			  <h3 id="WIN64_RELEASE1_NAME">OpenSCAD</h3>
-			  <small>x86 (64-bit) exe installer - </small><small id="WIN64_RELEASE1_SIZE">?? MB</small>
-			</button>
-			</a>
-			<a id="WIN64_RELEASE2_URL" href="https://files.openscad.org">
-			<button class="download-button">
-			  <h3 id="WIN64_RELEASE2_NAME">OpenSCAD</h3>
-			  <small>x86 (64-bit) zip package - </small><small id="WIN64_RELEASE2_SIZE">?? MB</small>
-			</button>
-			</a>
+			<div class="left, download-button">
+				<a id="WIN64_RELEASE_INSTALLER_URL" href="https://files.openscad.org">
+			  <h3 id="WIN64_RELEASE_INSTALLER_NAME">OpenSCAD</h3></a>
+				<small>x86 (64-bit) exe installer - </small><small id="WIN64_RELEASE_INSTALLER_SIZE">?? MB</small><br>
+				<small><a id="WIN64_RELEASE_INSTALLER_ASC_URL" href="">asc</a></small> -
+				<small><a id="WIN64_RELEASE_INSTALLER_SHA256_URL" href="">sha256</a></small> -
+				<small><a id="WIN64_RELEASE_INSTALLER_SHA512_URL" href="">sha512</a></small>
+			</div>
+			<div class="download-button">
+				<a id="WIN64_RELEASE_ZIP_URL" href="https://files.openscad.org">
+			  <h3 id="WIN64_RELEASE_ZIP_NAME">OpenSCAD</h3></a>
+				<small>x86 (64-bit) exe installer - </small><small id="WIN64_RELEASE_ZIP_SIZE">?? MB</small><br>
+				<small><a id="WIN64_RELEASE_ZIP_ASC_URL" href="">asc</a></small> -
+				<small><a id="WIN64_RELEASE_ZIP_SHA256_URL" href="">sha256</a></small> -
+				<small><a id="WIN64_RELEASE_ZIP_SHA512_URL" href="">sha512</a></small>
+			</div>
 		</section>
 
 		<section id="linux">
@@ -324,7 +332,6 @@
 					<small><a id="WIN64_SNAPSHOT_ZIP_ASC_URL" href="">asc</a></small> -
 					<small><a id="WIN64_SNAPSHOT_ZIP_SHA256_URL" href="">sha256</a></small>
 				</div>
-				</a>
 			</div>
 
 			<div id="snapshots-linux" class="subsection">
