--- a/downloads.html
+++ b/downloads.html
@@ -167,7 +167,7 @@
 			<div class="download-button">
 				<a id="WIN32_RELEASE_ZIP_URL" href="https://files.openscad.org">
 			  <h3 id="WIN32_RELEASE_ZIP_NAME">OpenSCAD</h3></a>
-				<small>x86 (32-bit) exe installer - </small><small id="WIN32_RELEASE_ZIP_SIZE">?? MB</small><br>
+				<small>x86 (32-bit) zip package - </small><small id="WIN32_RELEASE_ZIP_SIZE">?? MB</small><br>
 				<small><a id="WIN32_RELEASE_ZIP_ASC_URL" href="">asc</a></small> -
 				<small><a id="WIN32_RELEASE_ZIP_SHA256_URL" href="">sha256</a></small> -
 				<small><a id="WIN32_RELEASE_ZIP_SHA512_URL" href="">sha512</a></small>
@@ -184,7 +184,7 @@
 			<div class="download-button">
 				<a id="WIN64_RELEASE_ZIP_URL" href="https://files.openscad.org">
 			  <h3 id="WIN64_RELEASE_ZIP_NAME">OpenSCAD</h3></a>
-				<small>x86 (64-bit) exe installer - </small><small id="WIN64_RELEASE_ZIP_SIZE">?? MB</small><br>
+				<small>x86 (64-bit) zip package - </small><small id="WIN64_RELEASE_ZIP_SIZE">?? MB</small><br>
 				<small><a id="WIN64_RELEASE_ZIP_ASC_URL" href="">asc</a></small> -
 				<small><a id="WIN64_RELEASE_ZIP_SHA256_URL" href="">sha256</a></small> -
 				<small><a id="WIN64_RELEASE_ZIP_SHA512_URL" href="">sha512</a></small>
