Added more checksums

--- a/downloads.html
+++ b/downloads.html
@@ -123,7 +123,7 @@
 	<div id="sidebar" class="sticky">
 		<h1>Downloads</h1>
 		<ul>
-			<li><a href="#osx">Mac OS X</a></li>
+			<li><a href="#osx">macOS</a></li>
 			<li><a href="#windows">Windows</a></li>
 			<li><a href="#linux">Linux</a></li>
 			<li><a href="#other-systems">Other Systems</a></li>
@@ -135,13 +135,15 @@
 	
 	<article>
 		<section id="osx">
-			<h1>Mac OS X</h1>
+			<h1>macOS</h1>
 			<div class="subsection">
-				<p>System requirements: Mac OS X 10.7 or newer</p>
+				<p>System requirements: OS X 10.9 or newer</p>
 				<a id="MAC_RELEASE_URL" href="https://files.openscad.org">
 				<button class="download-button">
 					<h3 id="MAC_RELEASE_NAME">OpenSCAD</h3>
-					<small>64 bit Intel - dmg package - </small><small id="MAC_RELEASE_SIZE">?? MB</small>
+					<small>64 bit Intel - dmg package - </small><small id="MAC_RELEASE_SIZE">?? MB</small><br/>
+					<small><a id="MAC_RELEASE_SHA256_URL" href="">sha256</a></small> -
+					<small><a id="MAC_RELEASE_SHA512_URL" href="">sha512</a></small>
 				</button>
 				</a>
 			</div>
@@ -277,7 +279,9 @@
 			<button class="left, last, download-button">
 			  <h3 id="SRC_RELEASE_NAME">OpenSCAD</h3>
 			  <small>source code - tgz archive -</small><small id="SRC_RELEASE_SIZE">?? MB</small><br/>
-			  <small><a id="SRC_RELEASE_ASC_URL" href="">asc</a></small>
+			  <small><a id="SRC_RELEASE_ASC_URL" href="">asc</a></small> - 
+			  <small><a id="SRC_RELEASE_SHA256_URL" href="">sha256</a></small> - 
+			  <small><a id="SRC_RELEASE_SHA512_URL" href="">sha512</a></small>
 			</button>
                         </a>
 			<p>You can also access the latest source code on github: <a href="https://github.com/openscad/openscad" target="_blank">openscad/openscad on github</a></p>
@@ -289,7 +293,7 @@
 			<p>Development snapshots are built irregularly. If you want access to a more recent development snapshot, please contact the <a href="community.html#mailing-list">mailing list</a>.<p>
 
 			<div id="snapshots-osx" class="subsection">
-				<h2>Mac OS X</h2>
+				<h2>macOS</h2>
 				<a id="MAC_SNAPSHOT_URL" href="https://files.openscad.org">
 				<button class="download-button">
 					<h3 id="MAC_SNAPSHOT_NAME">OpenSCAD</h3>
