Update Linux AppImage release.

--- a/downloads.html
+++ b/downloads.html
@@ -234,12 +234,14 @@
 			<div id="other-linux" class="subsection">
 				<h2>Other Linux</h2>
 				<p>The AppImage package is intended to run on any recent Linux distribution. For more information about how AppImages work, see the <a href="https://appimage.org/">AppImage WebSite</a>.</p>
-				<a id="LIN64_RELEASE_URL" href="https://files.openscad.org">
-				<button class="download-button">
-					<h3 id="LIN64_RELEASE_NAME">OpenSCAD</h3>
-					<small>x64 (64-bit) - AppImage -</small><small id="LIN64_RELEASE_SIZE">?? MB</small>
-				</button>
-				</a>
+				<div class="download-button">
+					<a id="LIN64_RELEASE_URL" href="https://files.openscad.org">
+					<h3 id="LIN64_RELEASE_NAME">OpenSCAD</h3></a>
+					<small>x86 (64-bit) - AppImage - </small><small id="LIN64_RELEASE_SIZE">?? MB</small><br>
+					<small><a id="LIN64_RELEASE_ASC_URL" href="">asc</a></small> -
+					<small><a id="LIN64_RELEASE_SHA256_URL" href="">sha256</a></small> -
+					<small><a id="LIN64_RELEASE_SHA512_URL" href="">sha512</a></small>
+				</div>
 			</div>
 		</section>
 
