--- a/downloads.html
+++ b/downloads.html
@@ -130,6 +130,7 @@
 			<li><a href="#source-code">Source Code</a></li>
 			<li><a href="#snapshots">Development Snapshots</a></li>
 			<li><a href="#priorreleases">Prior Releases</a></li>
+			<li><a href="#pgp">PGP Signature</a></li>
 		</ul>
 	</div>
 	
@@ -483,6 +484,12 @@
 			<h1>Prior Releases</h1>
 
 			<p>Prior releases are available at <a href="https://files.openscad.org">files.openscad.org</a></p>
+		</section>
+
+		<section id="pgp">
+			<h1>PGP Signature</h1>
+
+			<p>Any signed downloads will use the OpenSCAD Development Team's PGP key: <a href="OpenSCAD_public_key.asc">OpenSCAD_public_key.asc</a> (ID: 22164A0F, fingerprint: E2EB DADD 336F F516 ADD5  1A78 F3E1 2CCC 2216 4A0)</p>
 		</section>
 
 
