--- a/community.html
+++ b/community.html
@@ -79,6 +79,7 @@
       <li><a href="downloads.html">Downloads</a></li>
       <li><a href="documentation.html">Documentation</a></li>
       <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="libraries.html">Libraries</a></li>
       <li class="current"><a href="community.html">Community</a></li>
       <li><a href="https://github.com/openscad/openscad/" target="_blank">GitHub</a></li>
     </ul>
