--- a/news.html
+++ b/news.html
@@ -77,6 +77,7 @@
       <li class="current"><a href="news.html">News</a></li>
       <li><a href="downloads.html">Downloads</a></li>
       <li><a href="documentation.html">Documentation</a></li>
+      <li><a href="libraries.html">Libraries</a></li>
       <li><a href="gallery.html">Gallery</a></li>
       <li><a href="community.html">Community</a></li>
       <li><a href="https://github.com/openscad/openscad/" target="_blank">GitHub</a></li>
