--- a/libraries.html
+++ b/libraries.html
@@ -114,6 +114,15 @@
         <li>Documentation: <a href="https://openhome.cc/eGossip/OpenSCAD/">https://openhome.cc/eGossip/OpenSCAD/</a></li>
       </ul>
       <p style="clear: both"></p>
+      <img class="libimg" src="https://raw.githubusercontent.com/nophead/NopSCADlib/master/libtest.png" width="200" align="right">
+      <h2>NopSCADlib</h2>
+      <p>An ever expanding library of parts modelled in OpenSCAD useful for 3D printers and enclosures for electronics, etc.</p>
+      <ul>
+        <li><a href="https://github.com/nophead/NopSCADlib">Library</a></li>
+        <li><a href="https://github.com/nophead/NopSCADlib/blob/master/readme.md">Documentation</a></li>
+        <li>License: GPL-3.0-or-later</li>
+      </ul>
+      <p style="clear: both"></p>
       <img class="libimg" src="images/bolts.gif" width="200" align="right">
       <h2>BOLTS</h2>
       <p>BOLTS is an Open Library of Technical Specifications.</p>
