Update headline for dotSCAD.

--- a/libraries.html
+++ b/libraries.html
@@ -108,7 +108,7 @@
       <p style="clear: both"></p>
       <img class="libimg" src="images/dotscad.gif" width="200" align="right">
       <h2>dotSCAD</h2>
-      <p>Helpful modules and functions when playing OpenSCAD.</p>
+      <p>Reduce the burden of 3D modeling in mathematics.</p>
       <ul>
         <li>Link: <a href="https://github.com/JustinSDK/dotSCAD">https://github.com/JustinSDK/dotSCAD</a></li>
         <li>Documentation: <a href="https://openhome.cc/eGossip/OpenSCAD/">https://openhome.cc/eGossip/OpenSCAD/</a></li>
